# ascii-book

./: .gitignore  README.md  demo_enhancements.py  pyproject.toml  requirements.txt
notebooks/: demo.ipynb
specs/001-ascii-art-generator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ascii-art-generator/checklists/: requirements.md
specs/001-ascii-art-generator/contracts/: cli-contract.md
specs/001-fix-ascii-brightness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-ascii-brightness/contracts/: cli-contract.md
specs/001-fix-minimalistic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-minimalistic/contracts/: cli-contract.md
src/: ascii_chars.py  ascii_generator.py  ascii_renderer.py  brightness_utils.py  image_processor.py  minimalistic_mode.py  test_minimalistic.py
src/ascii_art_generator/: conversion.py  main.py
src/ascii_art_generator.egg-info/: SOURCES.txt  entry_points.txt
src/pixcii/: conversion.py  main.py  minimalistic.py
tests/: test_conversion.py  test_minimalistic.py
