[project]
name = "pixcii"
version = "0.1.0"
dependencies = [
    "Pillow",
    "numpy",
    "opencv-python-headless",
    "rembg>=2.0.50",
    "onnxruntime",
    "tqdm",
    "numba>=0.59.0",
]

[project.scripts]
pixcii = "pixcii.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
